# fastAPIExercises

testdriven/async-api/: pyproject.toml
testdriven/async-api/async_api/app/: crud.py  db.py  main.py  notes.py
testdriven/async-api/async_api/tests/: conftest.py  test_main.py
testdriven/async-api/tests/: test_async_api.py
testdriven/fastAPI_react/fastAPI_react_backend/: main.py  pyproject.toml
testdriven/fastAPI_react/fastAPI_react_backend/fastapi_react_backend/: api.py
testdriven/fastAPI_react/fastAPI_react_backend/tests/: test_fastapi_react_backend.py
tutlinks_notes/: main.py  requirements.txt  test.db
weather-api/: pyproject.toml
weather-api/tests/: test_weather_api.py
weather-api/weather_api/: main.py  settings.json
weather-api/weather_api/api/: api.py
weather-api/weather_api/models/: location.py
weather-api/weather_api/views/: home.py
