[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["William Noble <27914124+williamnoble@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.18.2"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
